Refactor: improve dx
+ move zsh into submodule
+ reduce cognitive load: rename files more inline with shell execution
  flow i.e. .env.zsh [compile once], .interactive.zsh [interactive] and
  remove login and logout since we cannot justify them for our use case
  at this moment
+ source aliases from .zshrc, against worse performance, but it
  makes more sense semantically
+ reduce shell ambiguity and clarify compatability design: since we
  use zsh, only developer for zsh and disregard in bash or shell
  lifecycles, code portability between bash, zsh, sh and other systems
+ update README.md for setup instructions
+ use .bash, .zsh, .sh extensions for correct engagment of LSP,
  otherwise IDEs, LSP may correctly handle files and source code
+ decided to stick with .<file> schema because we like init.sh being at
  the bottom of the explorer or only exposing init.sh on finder, also
  helps to expose 'public' files without having to rely on nested
  structures and symlinking which would increase things to do in the
  development
+ using .zsh extensions wherever possible suggests that we can add .sh
  or .bash or other extensions that directly deal with different shells
  and we can add more as we go

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@ url = git@github.com:frankieandone/daivasmara.zsh-theme.git
 [submodule "lib/zsh-bench"]
 path = lib/zsh-bench
 url = git@github.com:frankieandone/zsh-bench.git
+[submodule "zsh"]
+path = zsh
+url = git@github.com:frankieandone/zsh.git
