--- a/.gitmodules
+++ b/.gitmodules
@@ -8,5 +8,8 @@ url = git@github.com:frankieandone/zsh-bench.git
 path = zsh
 url = git@github.com:frankieandone/zsh.git
 [submodule "app/iterm"]
-	path = app/iterm
-	url = git@github.com:frankieandone/iterm.git
+path = app/iterm
+url = git@github.com:frankieandone/iterm.git
+[submodule "app/nvim"]
+path = app/nvim
+url = git@github.com:frankieandone/nvim.git
